hphp/hack/test/typecheck/expression_trees/consecutive_splicing.php.like_types.exp
File "consecutive_splicing.php", line 6, characters 13-13:
Expected `ExprTree<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree (Typing[4110])
  File "consecutive_splicing.php", line 18, characters 6-43:
  But got `dynamic` because it is an unenforceable type
File "consecutive_splicing.php", line 7, characters 13-13:
Expected `ExprTree<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree (Typing[4110])
  File "consecutive_splicing.php", line 18, characters 6-43:
  But got `dynamic` because it is an unenforceable type
File "consecutive_splicing.php", line 8, characters 8-12:
Was expecting an object but type is unknown (Typing[4297])
  File "consecutive_splicing.php", line 6, characters 13-13:
  It is unknown because type parameter `TInfer` of `ExprTree` could not be determined. Please add explicit type parameters to the invocation of `ExprTree`
